# project2

./: A.json  check.sh  generateLetters.py  giphyAPI.py  giphyCLI.py  main.py  pyproject.toml  test.py
.pants.d/pids/2af8c5f8231d/pantsd/: fingerprint  process_name
cli/: main.py  setup.py
cli/main.egg-info/: PKG-INFO
letters/: 0.json  1.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json  A.json  B.json  C.json  D.json  E.json  F.json  G.json  H.json  I.json  J.json  K.json  L.json  M.json  N.json  O.json  P.json  Q.json  R.json  S.json  T.json  U.json  V.json  W.json  X.json  Y.json  Z.json
