[tool.poetry]
name = "project2"
version = "0.1.0"
description = "software enginering project2"
authors = ["Maxwell Chalmers <mchalme2@unca.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
